<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_light">

    <ImageView
        android:id="@+id/imagePokemon"
        android:layout_width="@dimen/pokemon_list_item_image_size"
        android:layout_height="@dimen/pokemon_list_item_image_size"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toTopOf="@id/attackTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagePokemon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name Pokemon" />

    <TextView
        android:id="@+id/attackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/defenseTextView"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/imagePokemon"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        tools:text="@string/attack_info" />

    <TextView
        android:id="@+id/defenseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/hpTextView"
        app:layout_constraintStart_toEndOf="@id/attackTextView"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        tools:text="@string/defense_info" />

    <TextView
        android:id="@+id/hpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/defenseTextView"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        tools:text="@string/hp_info" />

    <TextView
        android:id="@+id/idPokemonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_10dp"
        tools:text="@string/id_info"
        android:textColor="@color/blue"
        android:textSize="@dimen/normal_text_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line_spacer"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>