<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".features.pokemon_detail.presentation.PokemonDetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/detail_pokemon_title"
        app:titleTextColor="@color/blue" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/frontImageImageView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toStartOf="@id/backImageImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/backImageImageView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/frontImageImageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/frontImageTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:text="@string/front_image"
                android:textAlignment="center"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintEnd_toEndOf="@id/frontImageImageView"
                app:layout_constraintStart_toStartOf="@id/frontImageImageView"
                app:layout_constraintTop_toBottomOf="@id/frontImageImageView" />

            <TextView
                android:id="@+id/backImageTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:text="@string/back_image"
                android:textAlignment="center"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintEnd_toEndOf="@id/backImageImageView"
                app:layout_constraintStart_toStartOf="@id/backImageImageView"
                app:layout_constraintTop_toBottomOf="@id/backImageImageView" />

            <TextView
                android:id="@+id/infoPokemonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/information_about_pokemon"
                android:textAlignment="center"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/infoLinearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frontImageTextView" />

            <LinearLayout
                android:id="@+id/infoLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/infoPokemonTextView">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/heightTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:textAlignment="center"
                        android:textSize="@dimen/small_text_size"
                        app:layout_constraintBottom_toTopOf="@id/weightTextView"
                        app:layout_constraintEnd_toStartOf="@id/typeTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/infoPokemonTextView"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="@string/height_info" />

                    <TextView
                        android:id="@+id/weightTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:textAlignment="center"
                        android:textSize="@dimen/small_text_size"
                        app:layout_constraintEnd_toStartOf="@id/statsTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/heightTextView"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="@string/weight_info" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/typeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:textSize="@dimen/small_text_size"
                        tools:text="@string/type_info" />

                    <TextView
                        android:id="@+id/statsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:textSize="@dimen/small_text_size"
                        tools:text="Stats:" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>